# zellij-with-relay

./: Cargo.toml
default-plugins/share/src/: main.rs  main_screen.rs
src/: commands.rs
xtask/src/: build.rs  ci.rs  clippy.rs  flags.rs  main.rs  pipelines.rs  test.rs
zellij-ansi-clip/: Cargo.toml  README.md
zellij-ansi-clip/src/: emit.rs  grid.rs  lib.rs  parser.rs  tests.rs  wasm.rs
zellij-ansi-clip/tests/fixtures/: full_session_40x120.ansi
zellij-client/: Cargo.toml
zellij-client/src/: lib.rs
zellij-client/src/remote_attach/: auth.rs  mod.rs  websockets.rs
zellij-client/src/remote_attach/unit/: remote_attach_tests.rs
zellij-client/src/unit/: terminal_loop_tests.rs
zellij-client/src/web_client/: authentication.rs  connection_manager.rs  control_message.rs  http_handlers.rs  ipc_listener.rs  local_heartbeat.rs  message_handlers.rs  mod.rs  server_listener.rs  session_management.rs  types.rs  utils.rs  websocket_handlers.rs
zellij-client/src/web_client/relay/: control_tunnel.rs  mod.rs  multiplexer.rs  terminal_tunnel.rs  types.rs
zellij-client/src/web_client/unit/: relay_tests.rs
zellij-relay/: Cargo.toml
zellij-relay-protocol/: Cargo.toml
zellij-relay-protocol/assets/prost_relay/: generated_relay_protocol.rs  zellij.relay.v1.rs
zellij-relay-protocol/src/: conversion.rs  crypto.rs  lib.rs  tests.rs
zellij-relay-protocol/src/relay_protocol/: tunnel.proto
zellij-relay/assets/0.45.0/: auth.js  clip.wasm  crypto.js  modals.js
zellij-relay/deploy/: Dockerfile  Dockerfile.dockerignore  README.md  bootstrap-cert.sh  compose.yml  deploy.sh
zellij-relay/deploy/nginx/: Dockerfile  nginx.conf.template  proxy-ws.conf
zellij-relay/src/: cli.rs  config.rs  heartbeat.rs  lib.rs  main.rs  registry.rs  relay_tunnel_auth_tokens.rs  router.rs  slug.rs  tunnel_control.rs  tunnel_terminal.rs  versioned_assets.rs  viewer.rs
zellij-relay/tests/: router_integration.rs
zellij-server/src/: background_jobs.rs  lib.rs  route.rs  screen.rs
zellij-server/src/output/unit/: output_tests.rs
zellij-server/src/plugins/: zellij_exports.rs
zellij-server/src/tab/: mod.rs
zellij-tile/src/: shim.rs
zellij-utils/: Cargo.toml
zellij-utils/assets/prost/: api.event.rs  api.plugin_command.rs
zellij-utils/assets/prost_ipc/: client_server_contract.rs
zellij-utils/assets/prost_web_server/: web_server_contract.rs
zellij-utils/src/: data.rs  errors.rs  ipc.rs  remote_session_tokens.rs  web_authentication_tokens.rs  web_server_commands.rs
zellij-utils/src/client_server_contract/: client_to_server.proto  common_types.proto  server_to_client.proto
zellij-utils/src/input/: mod.rs  options.rs
zellij-utils/src/ipc/: protobuf_conversion.rs
zellij-utils/src/ipc/tests/: roundtrip_tests.rs
zellij-utils/src/kdl/: mod.rs
zellij-utils/src/kdl/snapshots/: zellij_utils__kdl__bare_config_from_default_assets_to_string_with_comments.snap  zellij_utils__kdl__config_options_to_string_with_comments.snap
zellij-utils/src/plugin_api/: event.proto  event.rs  plugin_command.proto  plugin_command.rs
zellij-utils/src/snapshots/: zellij_utils__setup__setup_test__cli_arguments_override_config_options.snap  zellij_utils__setup__setup_test__cli_arguments_override_layout_options.snap  zellij_utils__setup__setup_test__default_config_with_no_cli_arguments-3.snap  zellij_utils__setup__setup_test__default_config_with_no_cli_arguments.snap  zellij_utils__setup__setup_test__layout_env_vars_override_config_env_vars.snap  zellij_utils__setup__setup_test__layout_keybinds_override_config_keybinds.snap  zellij_utils__setup__setup_test__layout_options_override_config_options.snap  zellij_utils__setup__setup_test__layout_themes_override_config_themes.snap  zellij_utils__setup__setup_test__layout_ui_config_overrides_config_ui_config.snap
zellij-utils/src/web_server_contract/: protobuf_conversion.rs  web_server_commands.proto
zellij-web-client-assets/: Cargo.toml
zellij-web-client-assets/assets/: auth.js  clip.js  clip.wasm  index.html  index.js  style.css  websockets.js
zellij-web-client-assets/src/: lib.rs
