[package]
name = "zellij-web-client-assets"
version.workspace = true
authors = ["Aram Drevekenin <aram@poor.dev>"]
edition.workspace = true
description = "Bundled web client assets for Zellij local web server and relay"
license.workspace = true
include = ["src/**/*", "assets/**/*"]

[dependencies]
include_dir = { workspace = true }

[features]
# When set, `lookup("clip.wasm")` resolves against the live build artifact at
# `target/wasm32-unknown-unknown/release/zellij_ansi_clip.wasm` instead of the
# committed bundle under `assets/`. Useful during iteration — avoids a commit
# after every edit to `zellij-ansi-clip`.
clip_wasm_from_target = []
